{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 273,
  "lineage": "8e8519ec-e88e-1168-a302-9200368eaf31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7f71ed87a8e01cb",
            "association_id": "eipassoc-02416cb74dea916aa",
            "domain": "vpc",
            "id": "eipalloc-0e7f71ed87a8e01cb",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-02406e689dc3ad829",
            "private_dns": "ip-10-5-1-159.eu-west-3.compute.internal",
            "private_ip": "10.5.1.159",
            "public_dns": "ec2-13-36-101-53.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.101.53",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4b7ff081ca1ded9",
            "arn": "arn:aws:ec2:eu-west-3:250423784534:instance/i-0b43b51f4642e41aa",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b43b51f4642e41aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vitaly_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f8e686a74d075867"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f8e686a74d075867",
            "private_dns": "ip-10-5-7-140.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.7.140",
            "public_ip": "15.237.194.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04d2c7b65ff15b07a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab9dcf2a5a91746d",
            "tags": {
              "Name": "task-web-1"
            },
            "tags_all": {
              "Name": "task-web-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03cf43069472120c1",
              "sg-0cc5f915046c1e409"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_network_interface.net_interface",
            "aws_security_group.load_balancer",
            "aws_security_group.ssh-in",
            "aws_security_group.web",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4b7ff081ca1ded9",
            "arn": "arn:aws:ec2:eu-west-3:250423784534:instance/i-04e7837ccbcd92925",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e7837ccbcd92925",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vitaly_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0b9e09c9ba5cc3080"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b9e09c9ba5cc3080",
            "private_dns": "ip-10-5-26-51.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.26.51",
            "public_ip": "13.38.98.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0011c8dd5d06c06c0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0afa5e67de57e1f6f",
            "tags": {
              "Name": "task-web-2"
            },
            "tags_all": {
              "Name": "task-web-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03cf43069472120c1",
              "sg-0cc5f915046c1e409"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_network_interface.net_interface",
            "aws_security_group.load_balancer",
            "aws_security_group.ssh-in",
            "aws_security_group.web",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:internet-gateway/igw-04b529b2ceef21d66",
            "id": "igw-04b529b2ceef21d66",
            "owner_id": "250423784534",
            "tags": {
              "Name": "task-igw"
            },
            "tags_all": {
              "Name": "task-igw"
            },
            "vpc_id": "vpc-05f37da23780e0d6e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:250423784534:loadbalancer/app/task-lb/cae44c7548d613a4",
            "arn_suffix": "app/task-lb/cae44c7548d613a4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "task-lb-1935920644.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:250423784534:loadbalancer/app/task-lb/cae44c7548d613a4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "task-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-084172c1a7446170c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ab9dcf2a5a91746d"
              },
              {
                "subnet_id": "subnet-0afa5e67de57e1f6f"
              }
            ],
            "subnets": [
              "subnet-0ab9dcf2a5a91746d",
              "subnet-0afa5e67de57e1f6f"
            ],
            "tags": {
              "Name": "task-lb"
            },
            "tags_all": {
              "Name": "task-lb"
            },
            "vpc_id": "vpc-05f37da23780e0d6e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:250423784534:listener/app/task-lb/cae44c7548d613a4/1f39316a1add5a15",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:250423784534:targetgroup/task-targetgroup/7947b01c86d9e7fe",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:250423784534:listener/app/task-lb/cae44c7548d613a4/1f39316a1add5a15",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:250423784534:loadbalancer/app/task-lb/cae44c7548d613a4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.loadbalancer",
            "aws_lb_target_group.targetgroup",
            "aws_security_group.load_balancer",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "targetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:250423784534:targetgroup/task-targetgroup/7947b01c86d9e7fe",
            "arn_suffix": "targetgroup/task-targetgroup/7947b01c86d9e7fe",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:250423784534:targetgroup/task-targetgroup/7947b01c86d9e7fe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "task-targetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "task-targetgroup"
            },
            "tags_all": {
              "Name": "task-targetgroup"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05f37da23780e0d6e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:250423784534:targetgroup/task-targetgroup/7947b01c86d9e7fe-20231026165044299400000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:250423784534:targetgroup/task-targetgroup/7947b01c86d9e7fe",
            "target_id": "i-0b43b51f4642e41aa"
          },
          "dependencies": [
            "aws_instance.web-server",
            "aws_key_pair.generated_key",
            "aws_lb_target_group.targetgroup",
            "aws_network_interface.net_interface",
            "aws_security_group.load_balancer",
            "aws_security_group.ssh-in",
            "aws_security_group.web",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:250423784534:targetgroup/task-targetgroup/7947b01c86d9e7fe-20231026165044482900000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:250423784534:targetgroup/task-targetgroup/7947b01c86d9e7fe",
            "target_id": "i-04e7837ccbcd92925"
          },
          "dependencies": [
            "aws_instance.web-server",
            "aws_key_pair.generated_key",
            "aws_lb_target_group.targetgroup",
            "aws_network_interface.net_interface",
            "aws_security_group.load_balancer",
            "aws_security_group.ssh-in",
            "aws_security_group.web",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7f71ed87a8e01cb",
            "association_id": "eipassoc-02416cb74dea916aa",
            "connectivity_type": "public",
            "id": "nat-0fdf4949a710348c7",
            "network_interface_id": "eni-02406e689dc3ad829",
            "private_ip": "10.5.1.159",
            "public_ip": "13.36.101.53",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ab9dcf2a5a91746d",
            "tags": {
              "Name": "task-nat-gateway"
            },
            "tags_all": {
              "Name": "task-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "net_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:network-interface/eni-0f8e686a74d075867",
            "attachment": [
              {
                "attachment_id": "eni-attach-043a19c1627af0e45",
                "device_index": 0,
                "instance": "i-0b43b51f4642e41aa"
              }
            ],
            "id": "eni-0f8e686a74d075867",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:47:7c:40:0a:46",
            "owner_id": "250423784534",
            "private_ip": "10.5.7.140",
            "private_ip_list": [
              "10.5.7.140"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.5.7.140"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03cf43069472120c1",
              "sg-0cc5f915046c1e409"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab9dcf2a5a91746d"
          },
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_security_group.ssh-in",
            "aws_security_group.web",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:network-interface/eni-0b9e09c9ba5cc3080",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c702ea727bfd33da",
                "device_index": 0,
                "instance": "i-04e7837ccbcd92925"
              }
            ],
            "id": "eni-0b9e09c9ba5cc3080",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:7a:29:5a:8e:22",
            "owner_id": "250423784534",
            "private_ip": "10.5.26.51",
            "private_ip_list": [
              "10.5.26.51"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.5.26.51"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03cf43069472120c1",
              "sg-0cc5f915046c1e409"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0afa5e67de57e1f6f"
          },
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_security_group.ssh-in",
            "aws_security_group.web",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:route-table/rtb-0bf91ce3b8419ca50",
            "id": "rtb-0bf91ce3b8419ca50",
            "owner_id": "250423784534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0fdf4949a710348c7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "10.5.0.0/16",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "local",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "task-private-route-table"
            },
            "tags_all": {
              "Name": "task-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f37da23780e0d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:route-table/rtb-0805a77d6f9182a41",
            "id": "rtb-0805a77d6f9182a41",
            "owner_id": "250423784534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04b529b2ceef21d66",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.5.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task-public-route-table"
            },
            "tags_all": {
              "Name": "task-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f37da23780e0d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0458c90568e0a1d48",
            "route_table_id": "rtb-0bf91ce3b8419ca50",
            "subnet_id": "subnet-0384b4a66d61627be"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00806b1d4d1516bd6",
            "route_table_id": "rtb-0bf91ce3b8419ca50",
            "subnet_id": "subnet-0dc2cfe2d6a85105c"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4baa9e9ba805d79",
            "route_table_id": "rtb-0805a77d6f9182a41",
            "subnet_id": "subnet-0ab9dcf2a5a91746d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e58e9c08c4a9e23c",
            "route_table_id": "rtb-0805a77d6f9182a41",
            "subnet_id": "subnet-0afa5e67de57e1f6f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-memcached",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:security-group/sg-029dfec7e972d9fde",
            "description": "Access to Memcached",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029dfec7e972d9fde",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Connections to Memcached from web-servers",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03cf43069472120c1"
                ],
                "self": false,
                "to_port": 11211
              }
            ],
            "name": "memcached-sg",
            "name_prefix": "",
            "owner_id": "250423784534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "memcached-sg"
            },
            "tags_all": {
              "Name": "memcached-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f37da23780e0d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_security_group.web",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-postgresql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:security-group/sg-037be3bdc3f31a416",
            "description": "Access to db servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037be3bdc3f31a416",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Connections to PostgreSQL from web-servers",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03cf43069472120c1"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "250423784534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f37da23780e0d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_security_group.web",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:security-group/sg-03b78fa0c7ecfa74b",
            "description": "Access to redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b78fa0c7ecfa74b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Connections to Redis from web-servers",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03cf43069472120c1"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-sg",
            "name_prefix": "",
            "owner_id": "250423784534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redis-sg"
            },
            "tags_all": {
              "Name": "redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f37da23780e0d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_security_group.web",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:security-group/sg-084172c1a7446170c",
            "description": "Access to load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084172c1a7446170c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb-sg",
            "name_prefix": "",
            "owner_id": "250423784534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb-sg"
            },
            "tags_all": {
              "Name": "elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f37da23780e0d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:security-group/sg-0cc5f915046c1e409",
            "description": "Access by ssh from whitelisted IPs",
            "egress": [],
            "id": "sg-0cc5f915046c1e409",
            "ingress": [
              {
                "cidr_blocks": [
                  "217.28.48.78/32"
                ],
                "description": "SSH from admin IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-in-sg",
            "name_prefix": "",
            "owner_id": "250423784534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-in-sg"
            },
            "tags_all": {
              "Name": "ssh-in-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f37da23780e0d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:security-group/sg-03cf43069472120c1",
            "description": "Access to web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cf43069472120c1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP/HHTPS from load balancer",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084172c1a7446170c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "HTTP/HHTPS from load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084172c1a7446170c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "250423784534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f37da23780e0d6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:subnet/subnet-0384b4a66d61627be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.5.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0384b4a66d61627be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250423784534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-eu-west-3a-private-1"
            },
            "tags_all": {
              "Name": "task-eu-west-3a-private-1"
            },
            "vpc_id": "vpc-05f37da23780e0d6e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:subnet/subnet-0dc2cfe2d6a85105c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.5.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc2cfe2d6a85105c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250423784534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-eu-west-3b-private-2"
            },
            "tags_all": {
              "Name": "task-eu-west-3b-private-2"
            },
            "vpc_id": "vpc-05f37da23780e0d6e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:subnet/subnet-0ab9dcf2a5a91746d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.5.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab9dcf2a5a91746d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250423784534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-eu-west-3a-public-1"
            },
            "tags_all": {
              "Name": "task-eu-west-3a-public-1"
            },
            "vpc_id": "vpc-05f37da23780e0d6e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:subnet/subnet-0afa5e67de57e1f6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.5.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afa5e67de57e1f6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250423784534",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-eu-west-3b-public-2"
            },
            "tags_all": {
              "Name": "task-eu-west-3b-public-2"
            },
            "vpc_id": "vpc-05f37da23780e0d6e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:250423784534:vpc/vpc-05f37da23780e0d6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-0bb0384ac8207441e",
            "default_route_table_id": "rtb-06d994b7ce3f6509c",
            "default_security_group_id": "sg-0557b4f734723d65a",
            "dhcp_options_id": "dopt-01be127614c6af601",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05f37da23780e0d6e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d994b7ce3f6509c",
            "owner_id": "250423784534",
            "tags": {
              "Name": "task-vpc"
            },
            "tags_all": {
              "Name": "task-vpc"
            }
          }
        }
      ]
    }
  ]
}